webserver-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  labels:
    run: web-service

spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: nginx
